[package]
name = "LumineCapture"
version = "0.1.0"
edition = "2024"

[dependencies]
# ashpd for portals (not certain if it will be only for Wayland or also for X11 
# for the sake of early compatibility, but Wayland is indeed the priority)
ashpd = { version = "0.13.9", features = ["screencast", "pipewire"] }
tokio = { version = "1.50.0", features = ["full"] }
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
image = "0.25.10"
exr = "^1.74.0"
pipewire = "0.9.2"
zune-png = "0.5.2"
zune-core = "0.5.1"




wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["staging", "wayland-client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
smithay-client-toolkit = "0.20"
wayland-protocols-plasma = { version = "0.3.12", features = ["client"] }
nix = { version = "0.31.2", features = ["fs", "process"] }
memmap2 = "0.9"
async-trait = "0.1"